# star_over_bethlehem

./: .gitignore  CMakeLists.txt  Cargo.toml
example/: main.cpp
examples/: basic.rs  fragment_shader.hlsl  mesh_shader.hlsl
include/: star_over_bethlehem.h
src/: device.rs  instance.rs  lib.rs  physcial_device.rs  pipeline.rs  shader.rs  star_over_bethlehem.cpp  util.rs
src/base/: adapter.cpp  adapter.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  object.hpp  shader.hpp  utils.hpp
src/base/util/: shader_compiler.cpp  shader_compiler.hpp
src/metal/: adapter.cpp  adapter.hpp  device.hpp  device.rs  instance.cpp  instance.hpp  instance.rs  mod.rs  physical_device.rs  pipeline.rs  shader.rs  util.rs
src/metal/util/: dxil_to_metal.cpp  dxil_to_metal.hpp
src/vulkan/: util.rs
