[package]
name = "star_over_bethlehem"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0+1.3.281", optional = true }
hassle-rs = "0.11.0"
metal_irconverter = { git = "https://github.com/ProjectKML/metal_irconverter_rs"}
objc2 = { version = "0.5.2", features = [], optional = true }
objc2-metal = { version = "0.2.2", features = [
    "MTLAccelerationStructureTypes",
    "MTLLibrary",
    "MTLRenderPipeline",
    "MTLRenderCommandEncoder",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLPixelFormat",
    "MTLDevice",
    "MTLDrawable",
    "MTLRenderPass"], optional = true }
smallvec = "2.0.0-alpha.7"
thiserror = "2.0.4"
vk-mem-alloc = { git = "https://github.com/projectkml/vk-mem-alloc-rs", optional = true }

[features]
default = ["metal", "vulkan"]
metal = ["objc2", "objc2-metal"]
vulkan = ["ash", "vk-mem-alloc"]
